# cnsh-runtime

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cnsh_runtime/: __init__.py  cli.py  cli_voice.py
src/cnsh_runtime/cnsh/: ROOT_CARD.md  __init__.py  中央藏经阁.py  中央藏经阁目录.md  中央藏经阁索引.json  启动龍魂体系.py
src/cnsh_runtime/cnsh/adapters/: __init__.py  接口适配器.py
src/cnsh_runtime/cnsh/agents/: __init__.py  代理配置器.py
src/cnsh_runtime/cnsh/audit/: __init__.py  审计记录器.py
src/cnsh_runtime/cnsh/database/: __init__.py  龍魂数据库.py
src/cnsh_runtime/cnsh/eventbus/: __init__.py  事件总线.py
src/cnsh_runtime/cnsh/governance/: DNA追溯器.py  __init__.py  三层监督器.py  三色审计器.py
src/cnsh_runtime/cnsh/hooks/: __init__.py  钩子管理器.py
src/cnsh_runtime/cnsh/memory/: __init__.py  记忆管理器.py
src/cnsh_runtime/cnsh/notion/: Notion连接器.py  __init__.py
src/cnsh_runtime/cnsh/prompts/: __init__.py  系统提示词.py
src/cnsh_runtime/cnsh/protocols/: AI真相协议.py  __init__.py  君子协议.py  通心译协议.py
src/cnsh_runtime/cnsh/reactor/: __init__.py  图像识别引擎.py  文字识别引擎.py  语音识别引擎.py  金融交易引擎.py
src/cnsh_runtime/cnsh/reactor/測試圖像/: 測試結果.json
src/cnsh_runtime/cnsh/router/: __init__.py  龍魂路由器.py
src/cnsh_runtime/cnsh/runtime/: __init__.py  启动器.py  配置管理器.py
src/cnsh_runtime/cnsh/sandbox/: __init__.py  沙箱执行器.py
src/cnsh_runtime/cnsh/scripts/: 占位脚本.py
src/cnsh_runtime/cnsh/snapshots/: __init__.py  快照管理器.py
src/cnsh_runtime/cnsh/voice/: __init__.py  语音合成器.py  语音识别器.py
tests/: test_voice.py
